--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     </div>
     </header>
     <section class="albums">
-    <div class="size-container">
+    <div class="size-container albums-main-box">
 <div class="albums-box">
     <div class="albums-img-box"><img class="albums-image" src="./images/players/player-1.png" alt=""></div>
     <div class="albums-text">
-        <h3 class="albums-title"></h3>
-        <p class="albums-des"></p>
+        <h3 class="albums-title">Neymar Jr</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
     </div>
 </div>
 <div class="albums-box">
@@ -58,19 +58,131 @@
         <img class="albums-image" src="./images/players/player-2.png" alt="">
     </div>
     <div class="albums-text">
-        <h3 class="albums-title"></h3>
-        <p class="albums-des"></p>
+        <h3 class="albums-title">Lionel Messi</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
     </div>
 </div>
-<div class="albums-box">
+<div class="albums-box b-3">
     <div class="albums-img-box">
         <img class="albums-image" src="./images/players/player-3.png" alt="">
     </div>
     <div class="albums-text">
-        <h3 class="albums-title"></h3>
-        <p class="albums-des"></p>
+        <h3 class="albums-title">Cristiano Ronaldo</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
     </div>
 </div>
+
+
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-4.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Paulo Dybala</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-5.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Mesut Ozil </h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-6.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Mauro Icardi </h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-7.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Di Maria</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-8.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Kylian Mbappé</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-9.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Mohamed Salah</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-10.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Harry Kane</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-11.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Kevin De Bruyne</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+
+<div class="albums-box">
+    <div class="albums-img-box">
+        <img class="albums-image" src="./images/players/player-12.png" alt="">
+    </div>
+    <div class="albums-text">
+        <h3 class="albums-title">Philippe Coutinho</h3>
+        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+    </div>
+</div>
+    </div>
+</section>
+<section class="match-container">
+    <div class="size-container match">
+        <div class="match-text-container">
+            <h1 class="match-title">All Highlights <br>
+                Copa America 2021</h1>
+                <div class="match-des-container">
+            <p class="match-des">Amet minim mollit non deserunt ullamco est sit</p>
+                <p class="match-des">  aliqua dolor do amet sint. Velit officia consequat</p>
+                    <p class="match-des">   duis enim velit mollit. Exercitation veniam</p>
+                        <p class="match-des">   consequat sunt nostrud amet.</p>
+                    </div>
+            <button class=" banner-btn btn mtch-btn">Watch Now
+                <i class="fa-duotone fa-solid fa-arrow-right-long right-arrow"></i>
+            </button>
+        </div>
+        <div class="match-img-container">
+            <img src="./images/match.png" alt="">
+        </div>
     </div>
 </section>
 </body>
