--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="albums-img-box"><img class="albums-image" src="./images/players/player-1.png" alt=""></div>
     <div class="albums-text">
         <h3 class="albums-title">Neymar Jr</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Brazilian footballer known for his exceptional dribbling and creativity. He has starred for clubs like Barcelona and PSG and is a key player for the Brazilian national team.</p>
     </div>
 </div>
 <div class="albums-box">
@@ -59,7 +59,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Lionel Messi</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Lionel Messi is an Argentine footballer known for his exceptional dribbling and goal-scoring. He has won numerous titles with Barcelona and the World Cup with Argentina in 2022.</p>
     </div>
 </div>
 <div class="albums-box b-3">
@@ -68,7 +68,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Cristiano Ronaldo</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Portuguese footballer famous for his goal-scoring prowess and athleticism. He has won major titles with clubs like Real Madrid and Manchester United and led Portugal to Euro 2016 and the 2019 Nations League.</p>
     </div>
 </div>
 
@@ -80,7 +80,8 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Paulo Dybala</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">
+            Paulo Dybala is an Argentine footballer known for his skillful play and creativity. He has excelled with clubs like Juventus and AS Roma, and is a key player for the Argentine national team.</p>
     </div>
 </div>
 
@@ -90,7 +91,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Mesut Ozil </h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Mesut Özil is a German footballer celebrated for his exceptional vision and passing. He has played for top clubs like Real Madrid and Arsenal and was instrumental in Germany’s 2014 World Cup win.</p>
     </div>
 </div>
 
@@ -100,7 +101,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Mauro Icardi </h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Mauro Icardi is an Argentine striker known for his goal-scoring ability. He has played for clubs like Inter Milan and Paris Saint-Germain and is recognized for his sharp finishing and movement in the box.</p>
     </div>
 </div>
 
@@ -110,7 +111,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Di Maria</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Ángel Di María is an Argentine winger renowned for his speed and crossing ability. He has achieved success with clubs like Real Madrid and PSG and played a key role in Argentina's 2021 Copa América victory.</p>
     </div>
 </div>
 
@@ -120,7 +121,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Kylian Mbappé</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Kylian Mbappé is a French forward known for his speed and finishing. He has won major titles with Paris Saint-Germain and was instrumental in France's 2018 World Cup win.</p>
     </div>
 </div>
 
@@ -130,7 +131,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Mohamed Salah</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Mohamed Salah is an Egyptian forward celebrated for his speed and goal-scoring. He has achieved success with Liverpool, including winning the Premier League and Champions League.</p>
     </div>
 </div>
 
@@ -140,7 +141,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Harry Kane</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Harry Kane is an English striker known for his goal-scoring and playmaking. He has excelled with Tottenham Hotspur and the England national team.</p>
     </div>
 </div>
 
@@ -150,7 +151,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Kevin De Bruyne</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Kevin De Bruyne is a Belgian midfielder known for his exceptional passing and vision. He has been a key player for Manchester City, winning multiple Premier League titles and domestic cups.</p>
     </div>
 </div>
 
@@ -160,7 +161,7 @@
     </div>
     <div class="albums-text">
         <h3 class="albums-title">Philippe Coutinho</h3>
-        <p class="albums-des">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+        <p class="albums-des">Philippe Coutinho is a Brazilian midfielder known for his dribbling and creativity. He has played for clubs like Liverpool and Barcelona and is recognized for his skillful playmaking.</p>
     </div>
 </div>
     </div>
@@ -171,10 +172,10 @@
             <h1 class="match-title">All Highlights <br>
                 Copa America 2021</h1>
                 <div class="match-des-container">
-            <p class="match-des">Amet minim mollit non deserunt ullamco est sit</p>
-                <p class="match-des">  aliqua dolor do amet sint. Velit officia consequat</p>
-                    <p class="match-des">   duis enim velit mollit. Exercitation veniam</p>
-                        <p class="match-des">   consequat sunt nostrud amet.</p>
+            <p class="match-des">Argentina won the Copa América 2021, with Lionel Messi shining as the tournament’s top player.</p>
+                <p class="match-des">The final saw Argentina defeat Brazil, showcasing intense competition.</p>
+                    <p class="match-des">The tournament highlighted key performances and dramatic matches throughout.</p>
+                        <p class="match-des"> Argentina won the Copa América 2021, with Lionel Messi shining in the final against Brazil.</p>
                     </div>
             <button class=" banner-btn btn mtch-btn">Watch Now
                 <i class="fa-duotone fa-solid fa-arrow-right-long right-arrow"></i>
@@ -185,5 +186,29 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="foot-box">
+        <div class="foot-img">
+            <img class="foot-i" src="./images/Logo.png" alt="">
+        </div>
+        <div class="foot-icons">
+            <div class="insta icon-box">
+                <i class="fa-brands fa-instagram icons"></i>
+            </div>
+            <div class="basket icon-box">
+                <i class="fa-solid fa-basketball icons-b"></i>
+            </div>
+            <div class="twiter icon-box">
+                <i class="fa-brands fa-twitter icons"></i>
+            </div>
+            <div class="youtube icon-box">
+                <i class="fa-brands fa-youtube icons"></i>
+            </div>
+        </div>
+        <small class="foot-txt">
+           <p class="foot">Copyright © 2022 Football</p> 
+        </small>
+    </div>
+</footer>
 </body>
 </html>
